--- a/web2/contact.html
+++ b/web2/contact.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | The Beginner Library</title>
+    <title>Contact Us | Beginner Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
-        <div class="logo">The Beginner Library</div>
+        <div class="logo">Students Library</div>
         <nav>
             <a href="index.html">Home</a>
             <a href="catalog.html">Catalog</a>
@@ -21,49 +20,33 @@
             <a href="contact.html" class="active">Contact</a>
         </nav>
     </header>
-
     <main>
         <h1>Get in Touch</h1>
-        <p>We're here to help! Fill out the form below or find our location details.</p>
-
+        <p>Trying to reach us?</p>
         <form class="contact-form">
             <div class="form-group">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
             </div>
-
             <div class="form-group">
                 <label for="email">Email Address:</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            
-            <div class="form-group">
-                <label for="subject">Subject:</label>
-                <select id="subject" name="subject">
-                    <option value="general">General Inquiry</option>
-                    <option value="membership">Membership Question</option>
-                    <option value="suggestion">Book Suggestion</option>
-                </select>
-            </div>
-
             <div class="form-group">
                 <label for="message">Your Message:</label>
                 <textarea id="message" name="message" rows="5" required></textarea>
             </div>
-
             <button type="submit" class="button">Send Message</button>
         </form>
-
         <section class="location-info">
             <h2>Visit Us</h2>
-            <p>123 Knowledge Lane, Booktown, USA 10101</p>
-            <p>Phone: (555) 123-4567</p>
+            <p>Magadi Road, Ongata-Rongai, 00100-90132</p>
+            <a href="Emailto: mmu.ac.ke">Email: mmu.ac.ke</a>
+            <p>Phone: +254789231678</p>
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2025 The Beginner Library | Designed for Learning HTML & CSS</p>
+        <p>&copy; 2025 The Multimedia University Library |  HTML & CSS PROJECT</p>
     </footer>
-
 </body>
 </html>
