--- a/web2/index.html
+++ b/web2/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | The Beginner Library</title>
+    <title>MMU Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
-        <div class="logo">The Beginner Library</div>
+        <div class="logo">Students Library</div>
         <nav>
             <a href="index.html" class="active">Home</a>
             <a href="catalog.html">Catalog</a>
@@ -21,19 +20,17 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-
     <main>
-        <h1>Welcome to Your Local Library</h1>
-        
+        <h1 style="text-align: center;">Welcome to Multimedia University Library</h1>
         <div class="image-container">
-            <img src="library-image.jpg" alt="A friendly image of books on a shelf">
+            <img src="LIB.jpeg" alt="A friendly image of books on a shelf">
         </div>
-
         <p>
+            Welcome to Multimedia University Library where learning meets affordability.
             Dive into a world of knowledge! We offer thousands of books, digital resources, and community events.
-            Use the navigation above to explore our catalog, manage your account, or find an exciting event.
+           Learning Never stops here. 
+        
         </p>
-
         <section class="call-to-action">
             <h2>Ready to Discover?</h2>
             <p>Start your search today or create a free account.</p>
@@ -41,10 +38,8 @@
             <a href="account.html" class="button secondary">Create Account</a>
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2025 The Beginner Library | Designed for Learning HTML & CSS</p>
+        <p>&copy; 2025 The Multimedia University Library |  HTML & CSS PROJECT</p>
     </footer>
-
 </body>
 </html>
